# OOP-Labs

./: .gitignore  README.md
labs/lab1/var9/: CMakeLists.txt  README.md  main.cpp
labs/lab1/var9/include/: filter.h
labs/lab1/var9/src/: filter.cpp
labs/lab1/var9/tests/: tests.cpp
labs/lab2/var12/: CMakeLists.txt  README.md  main.cpp
labs/lab2/var12/include/: exceptions.h  money.h  vector.h
labs/lab2/var12/src/: money.cpp  vector.cpp
labs/lab2/var12/tests/: tests.cpp
labs/lab3/var9/: CMakeLists.txt  README.md  main.cpp
labs/lab3/var9/include/: exceptions.h  figure.h  rectangle.h  square.h  triangle.h  vector.h
labs/lab3/var9/src/: figure.cpp  rectangle.cpp  square.cpp  triangle.cpp  vector.cpp
labs/lab3/var9/tests/: tests.cpp
labs/lab4/var18/: CMakeLists.txt  README.md  main.cpp
labs/lab4/var18/include/: concepts.hpp  exceptions.hpp  figure.hpp  figure.ipp  rectangle.hpp  rectangle.ipp  square.hpp  square.ipp  trapezoid.hpp  trapezoid.ipp  vector.hpp  vector.ipp
labs/lab4/var18/tests/: tests.cpp
labs/lab5/var3/: CMakeLists.txt  README.md  main.cpp
labs/lab5/var3/include/: exceptions.hpp  forward_list.hpp  forward_list.ipp  memory_resource.hpp
labs/lab5/var3/src/: memory_resource.cpp
labs/lab5/var3/tests/: tests.cpp
